[gd_scene load_steps=8 format=3 uid="uid://botmig5ns8yk8"]

[ext_resource type="Script" uid="uid://c0jpwsjib028s" path="res://Scripts/playerItem.gd" id="1_5453o"]
[ext_resource type="Script" uid="uid://c1no7e1etd7gr" path="res://Scripts/editElo.gd" id="2_5th78"]
[ext_resource type="StyleBox" uid="uid://bhy77ejon6t8w" path="res://styles/editableFieldStyle.tres" id="2_kcfxe"]
[ext_resource type="FontFile" uid="uid://dige8501rbskh" path="res://fonts/Bion-Bold.otf" id="2_ntdx1"]
[ext_resource type="Texture2D" uid="uid://dc7neaswhddjw" path="res://img/Button.png" id="4_ckqq1"]
[ext_resource type="Script" uid="uid://pqpsa3lopgtf" path="res://Scripts/p_smurf.gd" id="5_s4lqd"]
[ext_resource type="Script" uid="uid://bkinleyhmicaj" path="res://p_name.gd" id="6_0624c"]

[node name="playerNode" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -2.0
offset_right = 180.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5453o")
color_index = 4294967295

[node name="pColor" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color(1, 1, 1, 0.2)

[node name="pElo" type="LineEdit" parent="."]
visible = false
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "Change Elo manually if needed.
Press RMB To reset.
Gray = No Elo.
Purple = Changed Elo.
Blue = Estimated Elo.
Black = Actual Elo."
focus_mode = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/minimum_character_width = 3
theme_override_fonts/font = ExtResource("2_ntdx1")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = ExtResource("2_kcfxe")
text = "1000"
alignment = 2
max_length = 4
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true
script = ExtResource("2_5th78")

[node name="pWrate" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 21
text = "50%"

[node name="pTeam" type="TextureButton" parent="."]
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
keep_pressed_outside = true
texture_normal = ExtResource("4_ckqq1")
ignore_texture_size = true
stretch_mode = 0

[node name="P_label" type="Label" parent="pTeam"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="pTeam"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
button_mask = 3
shortcut_feedback = false
shortcut_in_tooltip = false
flat = true

[node name="pFlag" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 5

[node name="pSmurf" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
tooltip_text = "list"
mouse_filter = 0
mouse_default_cursor_shape = 16
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 0.12549)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.596078)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 13
theme_override_font_sizes/font_size = 20
text = "Ⓢ"
horizontal_alignment = 1
script = ExtResource("5_s4lqd")

[node name="pName" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 20
text = "nameф3"
clip_text = true
script = ExtResource("6_0624c")

[node name="pCiv" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.288518, 0.288518, 0.288518, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 20
text = "Random"

[node name="pEmpty" type="Label" parent="."]
modulate = Color(0, 0, 0, 0.188235)
custom_minimum_size = Vector2(737, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "------------------------ empty ------------------------"

[connection signal="gui_input" from="pElo" to="pElo" method="_on_gui_input"]
[connection signal="text_changed" from="pElo" to="pElo" method="_on_text_changed"]
[connection signal="text_submitted" from="pElo" to="pElo" method="_on_text_submitted"]
[connection signal="gui_input" from="pTeam/Button" to="." method="_on_change_team"]
[connection signal="focus_exited" from="pSmurf" to="pSmurf" method="_on_focus_exited"]
[connection signal="gui_input" from="pSmurf" to="pSmurf" method="_on_gui_input"]
[connection signal="gui_input" from="pName" to="pName" method="_on_gui_input"]
